Added README doc for outbound adapter